--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -6,3 +6,23 @@
   text-decoration: none;
   color: #6fd8f7;
 }
+
+.image {
+  width: 80%;
+}
+
+@media (min-width: 576px) {
+  .image {
+    width: 55%;
+  }
+}
+@media (min-width: 768px) {
+  .image {
+    width: 40%;
+  }
+}
+@media (min-width: 1200px) {
+  .image {
+    width: 25%;
+  }
+}
